es_su locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5304 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_SU/foxtrick.properties
+++ b/content/locale/es_SU/foxtrick.properties
@@ -10,7 +10,7 @@ foxtrick.SmallerPages.desc=Reduce el tamaño de algunas páginas para que se ada
 foxtrick.SmallerPages.ReduceBid.desc=Mueve la subasta a un lado de las habilidades y corta todas las líneas dejando solo numeros (Como subasta actual y hora)
 foxtrick.ForumTemplates.desc=Permite convertir mensajes de la conferencia en plantillas para su uso posterior (Funciona también para correos, tickets, libros de visita, editoriales)
 foxtrick.ForumTemplates.DefaultShow.desc=Muestra u oculta las plantillas
-foxtrick.ForumTemplates.CustomWidth.desc=Usar un ancho personalizado para mostrar las plantillas (predeterminado 125(px))
+foxtrick.ForumTemplates.CustomWidth.desc=Usar un ancho personalizado para mostrar las plantillas (predeterminado 125px)
 foxtrick.ForumPreview.desc=Permite mostrar una vista previa del mensaje de la conferencia (Funciona también para correos, tickets, libros de visita, editoriales)
 foxtrick.HideManagerAvatar.desc=Ocultar el avatar del mánager, pero no los enlaces a su liga o país
 foxtrick.AddLeaveConfButton.desc=Añadir un botón 'Abandonar Conferencia' a cada carpeta de la conferencia
@@ -19,7 +19,7 @@ foxtrick.MoveLinks.desc=Mover los enlaces de liga y bandera del país a la cabec
 foxtrick.AttVsDef.desc=Añadir la Comparación Ataque/Defensa a la página de partidos
 foxtrick.AttVsDef.oldstyle.desc=Estilo antiguo
 foxtrick.AttVsDef.newstyle.desc=Estilo nuevo
-foxtrick.AttVsDef.oldstyleifkseperated.desc=Estilo antiguo (tiros indirectos reparados)
+foxtrick.AttVsDef.oldstyleifkseparated.desc=Estilo antiguo (tiros indirectos reparados)
 foxtrick.Ratings.desc=Añadir calificaciones en la página del partido
 foxtrick.BookmarkAdjust.desc=Cambiar el icono asociado a favoritos, insertando en el comentario del favorito el código correspondiente entre corchetes: Ej. [cyan] mostrará el icono de color 'cyan'. Posible valores: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white, yellow
 foxtrick.FoxtrickAlert.desc=Mostrar una ventana emergente de notificación con las noticias de Hattrick
@@ -75,7 +75,7 @@ foxtrick.ForumYouthIcons.youth_match.desc=Añade un icono para el ID del partido
 foxtrick.ForumYouthIcons.youth_series.desc=Añade un icono para el ID de la liga juvenil
 foxtrick.ForumYouthIcons.enlarge_input.desc=Agranda las cajas de texto para mejorar la escritura
 foxtrick.ForumYouthIcons.pre.desc=Añade un icono para el pre-formato del foro
-foxtrick.ShowMessageButton.desc=Añadir un botón de "Enviar mensaje" en la página del mánager
+foxtrick.ForumYouthIcons.table.desc=Añade un icono para tabla
 foxtrick.FormatPostingText.desc=Reemplaza las etiquetas HT-ML de Foxtrick por etiquetas HTML-Tags
 foxtrick.CopyPostID.desc=Enlace para copiar el PostId.
 foxtrick.CopyPostID.AddCopyIcon.desc=Añade un icono para copiar el ID antes del primer postID
@@ -93,8 +93,8 @@ foxtrick.LinksEconomy.desc=Añadir algunos enlaces externos en la página de fin
 foxtrick.LinksYouthOverview.desc=Añadir algunos enlaces externos en la página de Vista General del Equipo de Juveniles
 foxtrick.LinksYouthTraining.desc=Añade algunos enlaces externos denro de la página de entrenamiento del equipo juvenil
 foxtrick.LinksYouthPlayerDetail.desc=Añade algunos enlaces externos dentro de la página del jugador juvenil
-foxtrick.LinksYouthPlayerlist.desc=Añadir algunos enlaces externos en la página de jugadores juveniles
-foxtrick.LinksYouthMatchlist.desc=Añadir algunos enlaces externos en la página de partidos juveniles
+foxtrick.LinksYouthPlayerList.desc=Añadir algunos enlaces externos en la página de jugadores juveniles
+foxtrick.LinksYouthMatchList.desc=Añadir algunos enlaces externos en la página de partidos juveniles
 foxtrick.LinksArena.desc=Añadir algunos enlaces externos en la página del estadio
 foxtrick.LinksCoach.desc=Añadir algunos enlaces externos en la página de nuevo entrenador
 foxtrick.LinksPlayerDetail.desc=Añadir algunos enlaces externos en la página de Detalles del Jugador
@@ -123,7 +123,7 @@ foxtrick.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Reemplaza la imagen de l
 foxtrick.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Reemplaza el icono de 'Mensaje a Favoritos' con uno de menor tamaño.
 foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Resalta el ID de los mensajes excritos por el usuario que abrio el hilo
 foxtrick.AddDefaultFaceCard.desc=Muestra la cara por defecto para los usuarios del foro que no hayan especificado avatar
-foxtrick.OriginalFace.desc=Muestra la cara orgiginal de los jugadores
+foxtrick.OriginalFace.desc=Muestra la cara original de los jugadores
 foxtrick.OriginalFace.HideTransfer.desc=Oculta las imagenes de transferencia en la cara del jugador
 foxtrick.OriginalFace.HideInjury.desc=Oculta las imagenes de lesión en la cara del jugador
 foxtrick.OriginalFace.HideSuspended.desc=Oculta las imagenes de suspención en la cara del jugador
@@ -132,7 +132,7 @@ foxtrick.ConfirmActions.desc=Preguntar por confirmación antes de ciertas accion
 foxtrick.ConfirmActions.Bid.desc=Ofertar por un jugador
 foxtrick.ConfirmActions.TransferList.desc=Colocar un jugador en la lista de transferencias
 foxtrick.ConfirmActions.NtChange.desc=Añadir/eliminar un jugador del equipo nacional
-foxtrick.ConfirmActions.StaffChange.desc=COntratar/despedir espcialistas
+foxtrick.ConfirmActions.StaffChange.desc=Contratar/despedir especialistas
 foxtrick.HideManagerAvatarUserInfo.desc=Ocultar información de usuario bajo el avatar en la conferencia
 foxtrick.PersonalityImages.desc=Añadir números de colores que reflejen el carácter, honestidad y agresividad en la página del jugador
 foxtrick.HideSignatures.desc=Ocultar la firma en los mensajes del foro y mostrar un enlace de 'Firma' en su lugar
@@ -141,7 +141,7 @@ foxtrick.ForumNextAndPrevious.desc=Eliminar los botones de 'Siguiente' y 'Anteri
 foxtrick.ForumLastPost.desc=Saltar al ultimo mensaje en lugar de saltar al primer mensaje de un tema ya leído
 foxtrick.ForumLastPost.lastpage.desc=Saltar a la última página, no al ultimo mensaje
 foxtrick.MatchPlayerColouring.desc=Colorear los nombres de los jugadores dependiendo de su equipo en el reporte del partido. Usando enlaces en la página del jugador, resalta al jugador solamente.
-foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido. Abajo puedes seleccionar los colores que desees.
+foxtrick.MatchReportFormat.desc=Presentación del reporte del partido línea por línea, de acuerdo a los eventos del partido.
 foxtrick.ForumRedirManagerToTeam.desc=Redirige, el enlace del foro, de la página del mánager a la página del usuario/equipo.
 foxtrick.ManagerButtons.desc=Añade o cambia los botones en las páginas del manager y del equipo
 foxtrick.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libro de Visitas dentro de la página del manage y la página del equipo
@@ -202,7 +202,7 @@ foxtrick.ForumPresentation.desc=Opciones de presentación adicionales para el Fo
 foxtrick.ForumPresentation.HideFlagsInForumHeader.desc=Oculta la bandera del usuario en el encabezado de los mensajes del foro.
 foxtrick.ForumPresentation.HideLeagueInForumHeader.desc=Oculta la liga del usuario en el encabezado de los mensajes del foro.
 foxtrick.ForumPresentation.Forum_Spoiler_reveal.desc=Muestra siempre el contenido de los spoilers
-foxtrick.ForumPresentation.hideForumNotificationBox.desc=Oculta la notificación del foro acerca de mensajes sin leer presvios dentro del hilo.
+foxtrick.ForumPresentation.hideForumNotificationBox.desc=Oculta la notificación del foro acerca de mensajes sin leer previos dentro del hilo.
 foxtrick.ForumPresentation.Forum_NewPostsInBracket.desc=Muestra el numero de nuevos mensajes entre brackets detrás de la cuenta de mensajes
 foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Muestra iconos en lugar de enlaces de texto en el pie del foro
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Arregla la descolocación del avatar e información cuando el encabezado del mensaje se llena
@@ -224,13 +224,14 @@ foxtrick.TickerColoring.MyHTMessages.desc=Color personalizado para mensajes de M
 foxtrick.TickerColoring.Hover.desc=Color perzonalizado al colocar el cursor
 foxtrick.ExtraShortcuts.desc=Añade un enlace a las Estadìsticas de Supporter en los iconos principales
 foxtrick.ExtraShortcuts.AddLeft.desc=Seleccionar para añadir el icono a la izquierda, dejar sin seleccionar para añadirlo a la derecha
-foxtrick.ExtraShortcuts.Supporterstats.desc=Icono de enlace a estadísticas de supporter
-foxtrick.ExtraShortcuts.Transfers.desc=Icono de enlace a la página de transferencias de tu equipo
-foxtrick.ExtraShortcuts.Prefs.desc=Icono de enlace a la página de Preferencias
-foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Icono de enlace a la página de Preferencias de Foxtrick
-foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Icono de enlace a Hattrick Radio (Bélgica/Holanda) (Winamp)
-foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Icono de enlace a Hattrick Radio (Bélgica/Holanda) (Windows Media Player)
-foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Icono de enlace a Radio downtime (DACHL) (Winamp)
+foxtrick.ExtraShortcuts.AddSpace.desc=Aumentar espacio para iconos (atajos)
+foxtrick.ExtraShortcuts.Supporterstats.desc=Enlace a estadísticas de supporter
+foxtrick.ExtraShortcuts.Transfers.desc=Enlace a la página de transferencias de tu equipo
+foxtrick.ExtraShortcuts.Prefs.desc=Enlace a la página de Preferencias
+foxtrick.ExtraShortcuts.FoxTrickPrefs.desc=Enlace a la página de Preferencias de Foxtrick
+foxtrick.ExtraShortcuts.HtRadioWinamp.desc=Enlace a Hattrick Radio (Bélgica/Holanda) (Winamp)
+foxtrick.ExtraShortcuts.HtRadioMediaPlayer.desc=Enlace a Hattrick Radio (Bélgica/Holanda) (Windows Media Player)
+foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Enlace a Radio downtime (DACHL) (Winamp)
 foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
 foxtrick.HeaderFix.desc=Arregla el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
@@ -262,7 +263,7 @@ foxtrick.LeagueNewsFilter.friendlies.desc=Mostrar solo amistosos internacionales
 foxtrick.LeagueNewsFilter.transfers.desc=Mostrar solo transferencias
 foxtrick.LeagueNewsFilter.lineup_changes.desc=Mostrar solo cambios en la alineación
 foxtrick.LeagueNewsFilter.PAs.desc=Mostrar solo Anuncios de prensa
-foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Resaltar equipos que colocaron o cambairoan las ordenes de su partido en la ultima semana.
+foxtrick.LeagueNewsFilter.highlight_set_lineup.desc=Resaltar equipos que colocaron o cambiaron las ordenes de su partido en la ultima semana.
 foxtrick.LeagueNewsFilter.highlight_wins.desc=Resaltar equipos ganadores en los ultimos partidos de liga.
 foxtrick.LeagueNewsFilter.gray_bots.desc=Resaltar bots y equipos sin dueños en la tabla de partidos de liga.
 foxtrick.ShortPAs.desc=Muestra solo un enbezado expandible para los anuncios de prensa
@@ -312,27 +313,13 @@ foxtrick.SkillColoring.only_skill_color.desc=Solo coloca las habilidades en colo
 foxtrick.SkillColoring.skill_number.desc=Mostrar las habilidades como número p.ej. bueno(7)
 foxtrick.SkillColoring.skill_number_translated.desc=Mostrar las habilidades traducidas al inglés y como número p.ej. bueno (solid 7)
 foxtrick.SkillColoring.skill_select.desc=Mostrar números en la página de transferencias, p.ej bueno (7)
-foxtrick.SkillColoring.no_skill_links.desc=Escode el subrayado y fuente color verde dadas por los HTs
+foxtrick.SkillColoring.no_skill_links.desc=Esconde el subrayado y fuente color verde dadas por los HTs
 foxtrick.BackgroundFixed.desc=Imagen de fondo estática
 foxtrick.MatchIncome.desc=Ingreso del partido dentro del reporte del partido
 foxtrick.CrossTable.allway_show_cross.desc=Mostrar siempre la Tabla cruzada
 foxtrick.CrossTable.allway_show_graph.desc=Mostrar siempre la gráfica de la liga
 foxtrick.CrossTable.GraphHeader.desc=Gráfica de la temporada
 foxtrick.CrossTable.TableHeader.desc=Tabla cruzada de la temporada
-foxtrick.MatchReportFormat.Text_My_Team.desc=Color de mi equipo
-foxtrick.MatchReportFormat.Text_Home.desc=Color del equipo local
-foxtrick.MatchReportFormat.Text_Away.desc=Color del equipo visitante
-foxtrick.MatchReportFormat.BG_My_Team.desc=Color de fondo de los eventos de mi equipo
-foxtrick.MatchReportFormat.BG_Home.desc=Color de fondo de los eventos del equipo local
-foxtrick.MatchReportFormat.BG_Away.desc=Color de fondo de los eventos del equipo visitante
-foxtrick.MatchReportFormat.border_width_normal.desc=Ancho del borde en eventos normales
-foxtrick.MatchReportFormat.border_width_goal.desc=Ancho del borde en eventos con gol
-foxtrick.MatchReportFormat.border_color_non_goal.desc=Ancho del borde en eventos sin gol
-foxtrick.MatchReportFormat.border_color_goal_my.desc=Color del borde en eventos de gol de mi equipo
-foxtrick.MatchReportFormat.border_color_goal_home.desc=Color del borde en eventos de gol del local
-foxtrick.MatchReportFormat.border_color_goal_away.desc=Color del borde en eventos de gol del visitante
-foxtrick.MatchReportFormat.normal text.desc=Background-Color del texto normal
-foxtrick.MatchReportFormat.half time.desc=Color de fondo de textos con alineaciones y mediotiempo
 foxtrick.YouthSkillHideUnknown.desc=Más espacio en la página de jugadores juveniles
 foxtrick.YouthSkillHideUnknown.HideUnknown.desc=Oculta las habilidades desconocidas de los juveniles, dentro de la página de jugadores
 foxtrick.YouthSkillHideUnknown.HideMaximalKeyWord.desc=Oculta la palabra 'máximo' para ganar más espacio, dentro de la página de jugadores juveniles, especialmente si las caras estan habilitadas
@@ -367,12 +354,13 @@ foxtrick.RapidId.desc=Añade una caja en parte superior de la página para ver e
 foxtrick.ReadHtPrefsFromHeader.desc=Automaticamente ajustar las preferencias de Foxtrick
 foxtrick.ReadHtPrefsFromHeader.Language.desc=Configurar idioma
 foxtrick.ReadHtPrefsFromHeader.CountryCurrencyDateFormat.desc=Configurar país, fecha y moneda/divisa
-foxtrick.CopyPosting.CopyUnformatted.desc=Copiar en estilo sin formato
-foxtrick.CopyPosting.CopyWikiStyle.desc=Copiar en esitolo wiki.hattrick.org
-foxtrick.CopyPosting.CopyHT-MLQuoted.desc=Copiar en estilo HT-ML
 foxtrick.YouthSeriesEstimation.desc=En la tabla de resultados de búzqueda,estima el inicio de una liga juvenil que estan en el descanso entre temporadas.
 foxtrick.LocalTime.desc=Muestra de manera opcional la hora local en lugar de la hora de Hattrick. Dando clic en el reloj, se cambia entre ambas opciones.
 foxtrick.LocalTime.DefaultLocal.desc=Muestra la hora local de manera predeterminada.
+foxtrick.ForumThreadAutoIgnore.desc=Automáticamente ignorar temas del foro con las etiquetas seleccionadas (temas con [Etiqueta] o {Etiqueta})
+foxtrick.ForumThreadAutoIgnore.Tags.desc=Lista de etiquetas, ej: NT, idea, Bug.  Serparadas por coma, sin importar mayúsculas o minúsculas
+foxtrick.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista de temas aceptados por ID (solo la parte antes del punto). Los temas en la lista de aceptados no será ignorada. Separados por coma.
+foxtrick.TableSort.desc=Convierte las tablas 'propiamente realizadas' ordenables, cuando cuenten con encabezado (incluyendo las tablas en los mensajes del foro)
 
 # -----------------------------------------------------------------------------
 # IN-GAME STRINGS. translate first
@@ -453,8 +441,12 @@ preview=Vista previa
 sendmessage=Enviar
 
 #Forums
-foxtrick.CopyPostID=Copiar al Portapapeles
-foxtrick.CopyPosting=Copiar mensaje al portapapeles
+foxtrick.CopyPostID=Copiar al Portapapeles el ID del mensaje
+CopyPosting=Copiar mensaje en estilo %s
+CopyPosting.abbr=Copiar en estilo %s
+CopyPosting.style.ht-ml=HT-ML
+CopyPosting.style.wiki=wiki
+CopyPosting.style.raw=sin formato
 
 ForumYouthIcons.label=Enlaces de Juveniles
 ForumYouthIcons.labelToolbar=Enlaces Principales
@@ -469,7 +461,9 @@ ForumSpecialBBCode.kit=Añadir ID del kit
 ForumSpecialBBCode.article=Añadir artículo
 ForumSpecialBBCode.clock=Añadir hora actual
 ForumSpecialBBCode.spoiler=Añadir spoiler
-ForumSpecialBBCode.pre=Añadir etiqueta de 'pre' formato
+ForumSpecialBBCode.pre=Añadir etiqueta de formato 'pre'
+ForumSpecialBBCode.table=Insertar etiquetas de formato para tabla para convertir el texto seleccionado en tabla (Las líneas se convierten en filas. El texto separado por "%s" será convertido en celdas).
+ForumSpecialBBCode.tableSeparator=Convertir "%s" a celdas
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Escriba el nombre del filtro:
@@ -704,15 +698,16 @@ foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante 
 foxtrick.tweaks.ratingscopied=Las calificaciones han sido copiadas al portapapeles.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar el reporte de entrenamiento al portapapeles
-foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al Portapapeles (códgio para el foro de HT-ML)
+foxtrick.tweaks.copyskilltable=Copiar la tabla de habilidades al portapapeles (códgio para el foro de HT-ML)
 foxtrick.tweaks.copyscoutreport=Copiar el reporte del scout al portapapeles
+foxtrick.tweaks.scoutreportcopied=El comentario del scout ha sido copiado al portapapeles
 foxtrick.tweaks.copyplayerscource=Copiar código del jugador al portapapeles (pusado en hattrick-youthclub.org)
 foxtrick.tweaks.reportcopied=El reporte del entrenamiento/scout ha sido copiado al portapapeles
 foxtrick.tweaks.playersourcecopied=El código fuente del jugador ha sido copiado al portapapeles
 foxtrick.tweaks.skilltablecopied=El código de la tabla de habilidades ha sido copiada al portapapeles
 foxtrick.tweaks.matchidcopied=El ID del partido ha sido copiado al portapapeles.
-foxtrick.tweaks.postidcopied=El ID del mensaje ha sido copiado al portapapeles.
-foxtrick.tweaks.postingcopied=El mensaje ha sido copiado al portapapeles.
+foxtrick.tweaks.postidcopied=El ID del mensaje [post=%s] ha sido copiado al portapapeles.
+foxtrick.tweaks.postingcopied=El mensaje %s ha sido copiado al portapapeles.
 
 #matches
 foxtrick.matches.attackdefensebars=Comparación Ataque vs Defensa
