--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Polish language file @r5281
+﻿# Polish language file @r5295
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
@@ -58,7 +58,7 @@ foxtrick.HTDateFormat.LocalSaison.desc=Pokazuje numer sezonu lokalnego (krajoweg
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Zdefiniuj pierwszy dzień tygodnia sam (0 = poniedziałek, -2 = niedziela)
 foxtrick.TeamPopupLinks.desc=Wyświetla małe okienko pop-up z szybkimi odnośnikami, gdy kursor myszki znajdzie się na nazwie zespołu
 foxtrick.TeamPopupLinksMore.desc=Pokazuje link 'Więcej' przy popup-ie TeamPopupLinks
-foxtrick.StaffMarker.desc=Koloruje nicki załogi Hattricka na forum. Możesz sam wybrać kolor, podając w polu tekstowym jego wartość w języku HTML
+foxtrick.StaffMarker.desc=Koloruje nicki załogi Hattricka na forum oraz stronach drużyn
 foxtrick.StaffMarker.manager.desc=Koloruj nicki załogi Hattricka na forum.
 foxtrick.StaffMarker.own.desc=Własne znaczniki
 foxtrick.StaffMarker.flag.desc=Pokazuje flagi przy liście użytkowników w rozwijanym menu
@@ -148,6 +148,11 @@ foxtrick.ManagerButtons.GuestBook.desc=Dodaje przycisk 'Wpisz się do Księgi go
 foxtrick.ManagerButtons.LargeSendMail.desc=Otwiera skrzynkę pocztową w dużej postaci
 foxtrick.HTThreadMarker.desc=Koloruje wątki na forum utworzone przez HT-ków
 foxtrick.FTTeamStats.desc=Dodaje informacje o kartkach, kontuzjach, specjalnościach na stronie Zawodnicy
+foxtrick.FTTeamStats.General.desc=Informacje ogólne (TSI/wiek)
+foxtrick.FTTeamStats.Speciality.desc=Specjalność
+foxtrick.FTTeamStats.Personality.desc=Osobowość
+foxtrick.FTTeamStats.Status.desc=Status (kartki/kontuzje)
+foxtrick.FTTeamStats.Current_league.desc=Bieżąca liga
 foxtrick.ExtraPlayerInfo.Flag.desc=Dodaje flagę na stronie zawodnika
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Pokazuje typ trenera.
 foxtrick.ExtraPlayerInfo.LeadershipAndExperience.desc=Pokazuje przywództwo i doświadczenie zawodników
@@ -343,7 +348,6 @@ foxtrick.CountryList.HideFlagOntop.desc=Usuwa odnośnik do ligi na stronie druż
 foxtrick.MatchTables.desc=Usuwa białe przerwy w tabelach meczowych przy prostym motywie
 foxtrick.MatchTables.RemoveTime.desc=Usuwa godzinę meczu na stronie tabeli
 foxtrick.YouthPromotes.desc=Pokazuje ilość dni pozostałych do promowania juniora
-foxtrick.htmsStatistics.desc=Pokazuje statystyki w raporcie meczowym
 foxtrick.HighlightBotTeams.desc=Podświetla boty oraz drużyny bez właściciela na stronie ligi
 foxtrick.LastLogin.desc=Wyświetla czas od ostatniego zalogowania na stronie użytkownika
 foxtrick.TransferCompareSort.desc=Umożliwia sortowanie Porównania Transferów według formy, TSI i ceny
