note placement tweak + copyposting: added copy last style
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5315 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -142,7 +142,7 @@ foxtrick.ForumLastPost.desc=Springen zum letzten Posting eines gelesenen Threads
 foxtrick.ForumLastPost.lastpage.desc=Springe zur letzten Seite, nicht zum letzten posting
 foxtrick.MatchPlayerColouring.desc=Spieler im Spielbericht farblich hervorheben
 foxtrick.MatchReportFormat.desc=Formatierung des Spielberichts in einzelne Abschnitte. Einstellungen zum Format können untenstehend vorgenommen werden.
-foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Manager-Seite beim Klicken auf den von Links im Forum
+foxtrick.ForumRedirManagerToTeam.desc=Weiterleitung auf die Vereinsseite von den Managerlinks im Forum
 foxtrick.ManagerButtons.desc=Hinzufügen oder verändern der Managerbuttons auf Team- und Managerseiten
 foxtrick.ManagerButtons.GuestBook.desc=Hinzufügen von Links 'Gästebuch' auf der Manager-Seite und der Vereinsseite
 foxtrick.ManagerButtons.LargeSendMail.desc=Grosse Mailbox statt der kleinen öffnen
@@ -452,10 +452,11 @@ sendmessage=Absenden
 #Forums
 foxtrick.CopyPostID=In die Zwischenablage kopieren
 CopyPosting=Kopiere Posting im %s Stil in die Zwischenablage
-CopyPosting.abbr=Kopiere in %s Stil
+CopyPosting.abbr=Kopiere im %s Stil
 CopyPosting.style.ht-ml=HT-ML
-CopyPosting.style.wiki=wiki
-CopyPosting.style.raw=unformatiert
+CopyPosting.style.wiki=Wiki
+CopyPosting.style.raw=unformatierten
+CopyPosting.style.last=letzten
 
 ForumYouthIcons.label=Jugendlinks
 ForumYouthIcons.labelToolbar=Hauptlinks
