copyRatings.js as popup
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5318 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -701,9 +701,9 @@ foxtrick.tweaks.copyplayerad=Spieleranzeige in die Zwischenablage kopieren
 foxtrick.tweaks.copied=Die Spieleranzeige wurde in die Zwischenablage kopiert.
 HatStatsDetailed=HatStats (Details)
 HatStatsTotalOnly=HatStats (nur Gesamt)
-foxtrick.tweaks.copyratings=Ratings in die Zwischenablage kopieren (HT-ML Code style)
-foxtrick.tweaks.copyratings.home=Ratings der Heimmannschaft in die Zwischenablage kopieren (HT-ML Code style)
-foxtrick.tweaks.copyratings.away=Ratings der Auswärtsmannschaft in die Zwischenablage kopieren (HT-ML Code style)
+foxtrick.tweaks.copyratings.both=Ratings kopieren (HT-ML Code style)
+foxtrick.tweaks.copyratings.home=Ratings der Heimmannschaft kopieren (HT-ML Code style)
+foxtrick.tweaks.copyratings.away=Ratings der Auswärtsmannschaft kopieren (HT-ML Code style)
 foxtrick.tweaks.ratingscopied=Die Ratings wurden in die Zwischenablage kopiert.
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copytrainingreport=Kopiere Trainingsreport in die Zwischenablage
