es_ca locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@5323 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -58,7 +58,7 @@ foxtrick.HTDateFormat.LocalSaison.desc=Muestra la temporada local en lugar de la
 foxtrick.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, fijando el primer día de la semana (0 = lunes/predeterminado, -2 = sábado)
 foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, cuando se situa el cursor por encima del enlace a un equipo 
 foxtrick.TeamPopupLinksMore.desc=Muestra un enlace 'Más...' situando el cursor por ecima del enlace a un equipo, que revela más atajos
-foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo. En la cajas de texto puedes definir un estilo propio (atributo de estilo HTML).
+foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo. 
 foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 foxtrick.StaffMarker.own.desc=Marcadores personales
 foxtrick.StaffMarker.flag.desc=Añade banderas a los usuarios dentro de la caja de selección
@@ -148,6 +148,11 @@ foxtrick.ManagerButtons.GuestBook.desc=Añade un enlace para Escribir en el Libr
 foxtrick.ManagerButtons.LargeSendMail.desc=Aber una caja para escribir un ht-mail, en lugar de la pequeña que tiene HT predeterminada
 foxtrick.HTThreadMarker.desc=Marcar temas creados por HTs
 foxtrick.FTTeamStats.desc=Recopila una vista general del equipo, añade filtros e (opcionalmente) información extra de los jugadores.
+foxtrick.FTTeamStats.General.desc=Información General (TSI/edad)
+foxtrick.FTTeamStats.Speciality.desc=Especialidad
+foxtrick.FTTeamStats.Personality.desc=Personalidad
+foxtrick.FTTeamStats.Status.desc=Estado (tarjetas/lesiones)
+foxtrick.FTTeamStats.Current_league.desc=Liga Actual
 foxtrick.ExtraPlayerInfo.desc=Muestra información extra de los jugadores en la página de jugadores.
 foxtrick.ExtraPlayerInfo.CoachInfo.desc=Muestra información sobre entrenadores actuales y anteriores.
 foxtrick.ExtraPlayerInfo.Flag.desc=Muestra la nacionalidad de los jugadores como banderas.
@@ -168,7 +173,7 @@ foxtrick.LargeFlags.desc=Aumentar el tamaño de la bandera del país en la pági
 foxtrick.GoToPostBox.desc=Añadir una ventana 'Ir al Mensaje' dentro de la conferencia
 foxtrick.TeamSelectBox.desc=Reemplaza la lista de jugadores por un cuadro de selección
 foxtrick.TeamSelectBox.AlsoYouthPlayers.desc=También remplaza la lista de jugadores por una caja de selección, en la página de jugadores del Equipo juvenil
-foxtrick.CopyPlayerAdToClipboard.desc=Añade un botón en el menú de acciones de la página del jugador, que permite copiar un Anuncio de Transferencia al portapapeles
+foxtrick.CopyPlayerAd.desc=Añade en la página del jugador, que permite copiar su información (en HT-ML)
 foxtrick.CustomMedals.desc=Reemplaza las medallas del nuevo diseño de Hattrick, por las medallas del diseño antiguo
 foxtrick.SeniorTeamShortCuts.desc=Añade enlaces a Entrenador y Última Alineación de la página del equipo
 foxtrick.SeniorTeamShortCuts.OnlyOtherPages.desc=Mostrar unicamente en la página de otros equipos
@@ -235,12 +240,12 @@ foxtrick.ExtraShortcuts.DTRadioWinamp.desc=Enlace a Radio downtime (DACHL) (Wina
 foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de liga/copa/amistoso de los partidos o en el archivo de partidos. Para supporters funciona también en la página de Cara a Cara
 foxtrick.HeaderFix.desc=Arregla el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
-foxtrick.CopyRatingsToClipboard.desc=Añade enlaces en la tabla de calificaciones dentro del reporte del partido para copiar las calificaciones (en HT-ML)
+foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
 foxtrick.GoaldifferenceToTables.desc=Añade una columna con diferencia de goles, dentro de la tabla de promoción, al igual que en las tablas de liga pasadas.
 foxtrick.CrossTable.desc=Añade una tabla extra al Calendario de Partidos, donde se presentan todos los resultados de los partidos de la liga, incluyendo una gráfica con las posiciones de la liga
 foxtrick.ElectionTable.desc=Añade porcentajes a la tabla de elecciones (solo se cuentan los votos mostrados, no todos)
 foxtrick.ContextMenuCopy.desc=Añade opciones dentro del menú contextual para copiar ID y/o enlace y contenido en HT-ML
-foxtrick.ContextMenueCopyId.desc=Añade una opción dentro del menú contextual para copiar ID's (ID del equipo, usuario, etc)
+foxtrick.ContextMenueCopy.Id.desc=Añade una opción dentro del menú contextual para copiar ID's (ID del equipo, usuario, etc)
 foxtrick.ContextMenuCopy.Link.desc=Añade una opción para copiar la ubicación de un enlace en HT-ML
 foxtrick.ContextMenuCopy.HtMl.desc=Añade una opción para copiar el contenido selccionado en HT-ML
 foxtrick.ContextMenuCopy.Table.desc=Añade una opción para copiar una tabla en HT-ML
@@ -340,7 +345,6 @@ foxtrick.CountryList.HideFlagOntop.desc=Remueve la imagen a la liga en la págin
 foxtrick.MatchTables.desc=Elimina el espacio en blanco en la tabla de partidos para el diseño simple
 foxtrick.MatchTables.RemoveTime.desc=Elimina la hora del partido dentro de la tabla de partidos actuales
 foxtrick.YouthPromotes.desc=Muestra los días para promocionar a un jugador juvenil
-foxtrick.htmsStatistics.desc=Añade estadísticas sobre el resultado en la página del partido.
 foxtrick.HighlightBotTeams.desc=Resalta los equipos 'bots' y sin dueño en la página de la liga
 foxtrick.LastLogin.desc=Muestra el tiempo desde la última conexión en la página del mánager
 foxtrick.TransferCompareSort.desc=Dando clic en el encabezado, ordena los resultados del Comparador de Transferencias por TSI, precio o forma
@@ -451,6 +455,7 @@ CopyPosting.abbr=Copiar en estilo %s
 CopyPosting.style.ht-ml=HT-ML
 CopyPosting.style.wiki=wiki
 CopyPosting.style.raw=sin formato
+CopyPosting.style.last=último
 
 ForumYouthIcons.label=Enlaces de Juveniles
 ForumYouthIcons.labelToolbar=Enlaces Principales
@@ -468,6 +473,7 @@ ForumSpecialBBCode.spoiler=Añadir spoiler
 ForumSpecialBBCode.pre=Añadir etiqueta de formato 'pre' 
 ForumSpecialBBCode.table=Insertar etiquetas de formato para tabla para convertir el texto seleccionado en tabla (Las líneas se convierten en filas. El texto separado por "%s" será convertido en celdas).
 ForumSpecialBBCode.tableSeparator=Convertir "%s" a celdas
+ForumSpecialBBCode.enterSeparator=Introducir separador personalizado
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Escriba el nombre del filtro:
@@ -553,8 +559,8 @@ Stamina.abbr=Con
 Form=Form
 Form.abbr=Fo
 
-Status=Status
-Status.abbr=Status
+Status=Estado
+Status.abbr=Estado
 
 Yellow_card=Tarjeta Amarilla
 Yellow_card.abbr=A
@@ -695,9 +701,9 @@ foxtrick.tweaks.copyplayerad=Copiar anuncio de jugador al portapapeles
 foxtrick.tweaks.copied=El anuncio del jugador ha sido copiado al portapapeles
 HatStatsDetailed=HatStats (detalladas)
 HatStatsTotalOnly=HatStats (sólo totales)
-foxtrick.tweaks.copyratings=Copiar las calificaciones al Portapapeles (código HT-ML)
-foxtrick.tweaks.copyratings.home=Copiar las calificaciones del equipo local al Portapapeles (código HT-ML)
-foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante al Portapapeles (código HT-ML)
+foxtrick.tweaks.copyratings.both=Copiar las calificaciones (código HT-ML)
+foxtrick.tweaks.copyratings.home=Copiar las calificaciones del equipo local (código HT-ML)
+foxtrick.tweaks.copyratings.away=Copiar las calificaciones del equipo visitante (código HT-ML)
 foxtrick.tweaks.ratingscopied=Las calificaciones han sido copiadas al portapapeles.
 foxtrick.tweaks.youthclub=Hattrick-Youthclub.org
 foxtrick.tweaks.copytrainingreport=Copiar el reporte de entrenamiento al portapapeles
@@ -910,6 +916,7 @@ foxtrick.prefs.DisplayHTMLDebugOutput=Show additional debug output on Hattrick p
 
 
 ###EOF
+
 
 
 
