--- a/content/locale/de/releaseNotes.xml
+++ b/content/locale/de/releaseNotes.xml
@@ -10,6 +10,7 @@
 <lines>TransferSearchResultFilters: Filtern der Transfersuchergebnisse</lines>
 <lines>YouthSeriesEstimation: Schätzt die Startzeit von Jugendligen.</lines>
 <lines>ForumYouthIcons: Konvertiere Text in Tabellen.</lines>
+<lines>ForumThreadAutoIgnore: Automatisch Forenthemen mit ausgewählten Tags ignorieren</lines>
 
 
 <lines>SkillTable : Jetzt auch für Transfersuchergebnisse.</lines>
