--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -677,7 +677,7 @@ FoxtrickMyHtHelpPage=FoxTrick-Hilfeforum (English, German, Spanish, Italian):
 FoxtrickMyHtHelpPageLink=/Forum/Read.aspx?t=12625445
 
 StyleTutorial.title=Styling FoxTrick
-StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you could use CSS to define your preferred style.\nAn example user style file could be found at %s, and you could modify it to satisfy your need.\nAfter saving the file, you could use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
+StyleTutorial.content=FoxTrick provides a set of presentation interfaces for users to customise their own styles.\nThese interfaces are provided through HTML ids and classes, and you could use CSS to define your preferred style.\nAn example user style file could be found at %s, and you could modify it to satisfy your need.\nIf the link doens't open, copy and paste it to the adressbar. After saving the file, you could use the SkinPlugin module of FoxTrick to load the CSS file in order to have the user style in effect.
 
 # changes categories
 new=Neu
